- New UI for "user-info" & "user-settings". Picture-update was moved to "user-info". - Typescript-code-fix: user-info not showing and profilePicture not updating.

--- a/frontend/src/app/core/_components/user/user-info/user-info.component.scss
+++ b/frontend/src/app/core/_components/user/user-info/user-info.component.scss
@@ -1,7 +1,7 @@
 /* Design by Robert Mayer:https://goo.gl/CJ7yC8 */
 
 .margin-t {
-  margin-top: 120px;
+  margin-top: 80px;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
 }
 
 .wrapper-2 {
-  width: 780px;
+  width: 70%;
   margin: 30px auto;
   padding-bottom: 5px;
   border-radius: 5px 5px 5px 5px;
