--- a/frontend/src/app/core/_components/user/user-settings/user-settings.component.scss
+++ b/frontend/src/app/core/_components/user/user-settings/user-settings.component.scss
@@ -1,3 +1,9 @@
 .margin-t {
-  margin-top: 80px;
+  margin-top: 100px;
+  margin-left: 20%;
+  width: 80%;
+}
+
+.text {
+  margin-left: 17%;
 }
